[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyroxy"
version = "1.0.0"
description = "A simple HTTP proxy server"
authors = [{ name = "kiliczsh", email = "hi@muhammedkilic.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "blinker==1.9.0",
  "certifi==2025.1.31",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "flask==3.1.0",
  "idna==3.10",
  "itsdangerous==2.2.0",
  "jinja2==3.1.6",
  "markupsafe==3.0.2",
  "requests==2.32.3",
  "ruff==0.9.9",
  "urllib3==2.3.0",
  "werkzeug==3.1.3",
]

[project.scripts]
pyroxy = "main:main"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
